australian tags tweaking

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1253,55 +1253,55 @@
  SIK_cn_ADJ:0 "Russian"
  SIK_an_ADJ:0 "Russian"
 
-MON_ni:0 "Mongolian Principality"
-MON_ni_DEF:0 "The Mongolian Principality"
-MON_ds:0 "Mongolian Principality"
-MON_ds_DEF:0 "The Mongolian Principality"
-MON_rc:0 "Mongolian Principality"
-MON_rc_DEF:0 "The Mongolian Principality"
-MON_an:0 "Mongolian Principality"
-MON_an_DEF:0 "The Mongolian Principality"
-MON_cn:0 "Mongolian Principality"
-MON_cn_DEF:0 "The Mongolian Principality"
-MON_lb:0 "Mongolian Principality"
-MON_lb_DEF:0 "The Mongolian Principality"
-MON_ss:0 "Mongolian Principality"
-MON_ss_DEF:0 "The Mongolian Principality"
-MON_jc:0 "Mongolian Principality"
-MON_jc_DEF:0 "The Mongolian Principality"
-MON_ni_ADJ:0 "Mongolian"
-MON_rc_ADJ:0 "Mongolian"
-MON_lb_ADJ:0 "Mongolian"
-MON_ss_ADJ:0 "Mongolian"
-MON_jc_ADJ:0 "Mongolian"
-MON_ds_ADJ:0 "Mongolian"
-MON_cn_ADJ:0 "Mongolian"
-MON_an_ADJ:0 "Mongolian"
+  MON_ni:0 "Mongolian Principality"
+  MON_ni_DEF:0 "The Mongolian Principality"
+  MON_ds:0 "Mongolian Principality"
+  MON_ds_DEF:0 "The Mongolian Principality"
+  MON_rc:0 "Mongolian Principality"
+  MON_rc_DEF:0 "The Mongolian Principality"
+  MON_an:0 "Mongolian Principality"
+  MON_an_DEF:0 "The Mongolian Principality"
+  MON_cn:0 "Mongolian Principality"
+  MON_cn_DEF:0 "The Mongolian Principality"
+  MON_lb:0 "Mongolian Principality"
+  MON_lb_DEF:0 "The Mongolian Principality"
+  MON_ss:0 "Mongolian Principality"
+  MON_ss_DEF:0 "The Mongolian Principality"
+  MON_jc:0 "Mongolian Principality"
+  MON_jc_DEF:0 "The Mongolian Principality"
+  MON_ni_ADJ:0 "Mongolian"
+  MON_rc_ADJ:0 "Mongolian"
+  MON_lb_ADJ:0 "Mongolian"
+  MON_ss_ADJ:0 "Mongolian"
+  MON_jc_ADJ:0 "Mongolian"
+  MON_ds_ADJ:0 "Mongolian"
+  MON_cn_ADJ:0 "Mongolian"
+  MON_an_ADJ:0 "Mongolian"
 
-GAN_ni:0 "Army of Perpetual Resistance"
-GAN_ni_DEF:0 "The Army of Perpetual Resistance"
-GAN_ds:0 "Army of Perpetual Resistance"
-GAN_ds_DEF:0 "The Army of Perpetual Resistance"
-GAN_rc:0 "Army of Perpetual Resistance"
-GAN_rc_DEF:0 "The Army of Perpetual Resistance"
-GAN_an:0 "Army of Perpetual Resistance"
-GAN_an_DEF:0 "The Army of Perpetual Resistance"
-GAN_cn:0 "Army of Perpetual Resistance"
-GAN_cn_DEF:0 "The Army of Perpetual Resistance"
-GAN_lb:0 "Army of Perpetual Resistance"
-GAN_lb_DEF:0 "The Army of Perpetual Resistance"
-GAN_ss:0 "Army of Perpetual Resistance"
-GAN_ss_DEF:0 "The Army of Perpetual Resistance"
-GAN_jc:0 "Army of Perpetual Resistance"
-GAN_jc_DEF:0 "The Army of Perpetual Resistance"
-GAN_ni_ADJ:0 "Mongolian"
-GAN_rc_ADJ:0 "Mongolian"
-GAN_lb_ADJ:0 "Mongolian"
-GAN_ss_ADJ:0 "Mongolian"
-GAN_jc_ADJ:0 "Mongolian"
-GAN_ds_ADJ:0 "Mongolian"
-GAN_cn_ADJ:0 "Mongolian"
-GAN_an_ADJ:0 "Mongolian"
+  GAN_ni:0 "Army of Perpetual Resistance"
+  GAN_ni_DEF:0 "The Army of Perpetual Resistance"
+  GAN_ds:0 "Army of Perpetual Resistance"
+  GAN_ds_DEF:0 "The Army of Perpetual Resistance"
+  GAN_rc:0 "Army of Perpetual Resistance"
+  GAN_rc_DEF:0 "The Army of Perpetual Resistance"
+  GAN_an:0 "Army of Perpetual Resistance"
+  GAN_an_DEF:0 "The Army of Perpetual Resistance"
+  GAN_cn:0 "Army of Perpetual Resistance"
+  GAN_cn_DEF:0 "The Army of Perpetual Resistance"
+  GAN_lb:0 "Army of Perpetual Resistance"
+  GAN_lb_DEF:0 "The Army of Perpetual Resistance"
+  GAN_ss:0 "Army of Perpetual Resistance"
+  GAN_ss_DEF:0 "The Army of Perpetual Resistance"
+  GAN_jc:0 "Army of Perpetual Resistance"
+  GAN_jc_DEF:0 "The Army of Perpetual Resistance"
+  GAN_ni_ADJ:0 "Mongolian"
+  GAN_rc_ADJ:0 "Mongolian"
+  GAN_lb_ADJ:0 "Mongolian"
+  GAN_ss_ADJ:0 "Mongolian"
+  GAN_jc_ADJ:0 "Mongolian"
+  GAN_ds_ADJ:0 "Mongolian"
+  GAN_cn_ADJ:0 "Mongolian"
+  GAN_an_ADJ:0 "Mongolian"
 
  SHX_ni:0 "Western Constitutionalist Army"
  SHX_ni_DEF:0 "The Western Constitutionalist Army"
@@ -2078,30 +2078,30 @@ GAN_an_ADJ:0 "Mongolian"
  ECU_cn_ADJ:0 "Ecuadorian"
  ECU_an_ADJ:0 "Ecuadorian"
 
-PRU_ni:0 "Regency of New Spain"
-PRU_ni_DEF:0 "The Regency of New Spain"
-PRU_ds:0 "Republic of North Peru"
-PRU_ds_DEF:0 "The Republic of North Peru"
-PRU_rc:0 "Republic of North Peru"
-PRU_rc_DEF:0 "The Republic of North Peru"
-PRU_an:0 "Republic of North Peru"
-PRU_an_DEF:0 "The Republic of North Peru"
-PRU_cn:0 "Republic of North Peru"
-PRU_cn_DEF:0 "The Republic of North Peru"
-PRU_lb:0 "Republic of North Peru"
-PRU_lb_DEF:0 "The Republic of North Peru"
-PRU_ss:0 "Republic of North Peru"
-PRU_ss_DEF:0 "The Republic of North Peru"
-PRU_jc:0 "Plurinational Republic of North Peru"
-PRU_jc_DEF:0 "The Plurinational Republic of North Peru"
-PRU_ni_ADJ:0 "Peruvian"
-PRU_rc_ADJ:0 "Peruvian"
-PRU_lb_ADJ:0 "Peruvian"
-PRU_ss_ADJ:0 "Peruvian"
-PRU_jc_ADJ:0 "Peruvian"
-PRU_ds_ADJ:0 "Peruvian"
-PRU_cn_ADJ:0 "Peruvian"
-PRU_an_ADJ:0 "Peruvian"
+  PRU_ni:0 "Regency of New Spain"
+  PRU_ni_DEF:0 "The Regency of New Spain"
+  PRU_ds:0 "Republic of North Peru"
+  PRU_ds_DEF:0 "The Republic of North Peru"
+  PRU_rc:0 "Republic of North Peru"
+  PRU_rc_DEF:0 "The Republic of North Peru"
+  PRU_an:0 "Republic of North Peru"
+  PRU_an_DEF:0 "The Republic of North Peru"
+  PRU_cn:0 "Republic of North Peru"
+  PRU_cn_DEF:0 "The Republic of North Peru"
+  PRU_lb:0 "Republic of North Peru"
+  PRU_lb_DEF:0 "The Republic of North Peru"
+  PRU_ss:0 "Republic of North Peru"
+  PRU_ss_DEF:0 "The Republic of North Peru"
+  PRU_jc:0 "Plurinational Republic of North Peru"
+  PRU_jc_DEF:0 "The Plurinational Republic of North Peru"
+  PRU_ni_ADJ:0 "Peruvian"
+  PRU_rc_ADJ:0 "Peruvian"
+  PRU_lb_ADJ:0 "Peruvian"
+  PRU_ss_ADJ:0 "Peruvian"
+  PRU_jc_ADJ:0 "Peruvian"
+  PRU_ds_ADJ:0 "Peruvian"
+  PRU_cn_ADJ:0 "Peruvian"
+  PRU_an_ADJ:0 "Peruvian"
 
  CHR_ni:0 "Blessed Crown of Hispania"
  CHR_ni_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
@@ -2328,44 +2328,44 @@ PRU_an_ADJ:0 "Peruvian"
  ARG_cn_ADJ:0 "Rioplatense"
  ARG_an_ADJ:0 "Rioplatense"
 
-CHL_ni:0 "Kingdom of Wallmapu"
-CHL_ni_DEF:0 "The Kingdom of Wallmapu"
-CHL_ds:0 "Kingdom of Wallmapu"
-CHL_ds_DEF:0 "The Kingdom of Wallmapu"
-CHL_rc:0 "Kingdom of Wallmapu"
-CHL_rc_DEF:0 "The Kingdom of Wallmapu"
-CHL:0 "Kingdom of Wallmapu"
-CHL_DEF:0 "The Kingdom of Wallmapu"
-CHL_jc:0 "Kingdom of Wallmapu"
-CHL_jc_DEF:0 "The Kingdom of Wallmapu"
-CHL_ni_ADJ:0 "Mapuche"
-CHL_rc_ADJ:0 "Mapuche"
-CHL_lb_ADJ:0 "Mapuche"
-CHL_ss_ADJ:0 "Mapuche"
-CHL_jc_ADJ:0 "Mapuche"
-CHL_ds_ADJ:0 "Mapuche"
-CHL_cn_ADJ:0 "Mapuche"
-CHL_an_ADJ:0 "Mapuche"
-
-
-MPC_ni:0 "Kingdom of Wallmapu"
-MPC_ni_DEF:0 "The Kingdom of Wallmapu"
-MPC_ds:0 "Kingdom of Wallmapu"
-MPC_ds_DEF:0 "The Kingdom of Wallmapu"
-MPC_rc:0 "Kingdom of Wallmapu"
-MPC_rc_DEF:0 "The Kingdom of Wallmapu"
-MPC:0 "Kingdom of Wallmapu"
-MPC_DEF:0 "The Kingdom of Wallmapu"
-MPC_jc:0 "Kingdom of Wallmapu"
-MPC_jc_DEF:0 "The Kingdom of Wallmapu"
-MPC_ni_ADJ:0 "Mapuche"
-MPC_rc_ADJ:0 "Mapuche"
-MPC_lb_ADJ:0 "Mapuche"
-MPC_ss_ADJ:0 "Mapuche"
-MPC_jc_ADJ:0 "Mapuche"
-MPC_ds_ADJ:0 "Mapuche"
-MPC_cn_ADJ:0 "Mapuche"
-MPC_an_ADJ:0 "Mapuche"
+ CHL_ni:0 "Kingdom of Wallmapu"
+ CHL_ni_DEF:0 "The Kingdom of Wallmapu"
+ CHL_ds:0 "Kingdom of Wallmapu"
+ CHL_ds_DEF:0 "The Kingdom of Wallmapu"
+ CHL_rc:0 "Kingdom of Wallmapu"
+ CHL_rc_DEF:0 "The Kingdom of Wallmapu"
+ CHL:0 "Kingdom of Wallmapu"
+ CHL_DEF:0 "The Kingdom of Wallmapu"
+ CHL_jc:0 "Kingdom of Wallmapu"
+ CHL_jc_DEF:0 "The Kingdom of Wallmapu"
+ CHL_ni_ADJ:0 "Mapuche"
+ CHL_rc_ADJ:0 "Mapuche"
+ CHL_lb_ADJ:0 "Mapuche"
+ CHL_ss_ADJ:0 "Mapuche"
+ CHL_jc_ADJ:0 "Mapuche"
+ CHL_ds_ADJ:0 "Mapuche"
+ CHL_cn_ADJ:0 "Mapuche"
+ CHL_an_ADJ:0 "Mapuche"
+ 
+ 
+ MPC_ni:0 "Kingdom of Wallmapu"
+ MPC_ni_DEF:0 "The Kingdom of Wallmapu"
+ MPC_ds:0 "Kingdom of Wallmapu"
+ MPC_ds_DEF:0 "The Kingdom of Wallmapu"
+ MPC_rc:0 "Kingdom of Wallmapu"
+ MPC_rc_DEF:0 "The Kingdom of Wallmapu"
+ MPC:0 "Kingdom of Wallmapu"
+ MPC_DEF:0 "The Kingdom of Wallmapu"
+ MPC_jc:0 "Kingdom of Wallmapu"
+ MPC_jc_DEF:0 "The Kingdom of Wallmapu"
+ MPC_ni_ADJ:0 "Mapuche"
+ MPC_rc_ADJ:0 "Mapuche"
+ MPC_lb_ADJ:0 "Mapuche"
+ MPC_ss_ADJ:0 "Mapuche"
+ MPC_jc_ADJ:0 "Mapuche"
+ MPC_ds_ADJ:0 "Mapuche"
+ MPC_cn_ADJ:0 "Mapuche"
+ MPC_an_ADJ:0 "Mapuche"
 
  SCT_ni:0 "Santa Catarina"
  SCT_ni_DEF:0 "the Republic of Santa Catarina"
@@ -2931,8 +2931,8 @@ MPC_an_ADJ:0 "Mapuche"
  FST_rc_DEF:0 "the Republic of Australie"
  FST_an:0 "Republic of Australie"
  FST_an_DEF:0 "the Republic of Australie"
- FST_cn:0 "Solkusten Colony"
- FST_cn_DEF:0 "the Solkusten Colony"
+ FST_cn:0 "Republic of Australie"
+ FST_cn_DEF:0 "the Republic of Australie"
  FST_lb:0 "Republic of Australie"
  FST_lb_DEF:0 "the Republic of Australie"
  FST_ss:0 "Republic of Australie"
@@ -2945,8 +2945,12 @@ MPC_an_ADJ:0 "Mapuche"
  FST_ss_ADJ:0 "Australien"
  FST_jc_ADJ:0 "Australien"
  FST_ds_ADJ:0 "Australien"
- FST_cn_ADJ:0 "Swedish-Australian"
+ FST_cn_ADJ:0 "Australien"
  FST_an_ADJ:0 "Australien"
+
+ SLK: "Solkusten Colony"
+ SLK_DEF: "the Solkusten Colony"
+ SLK_DEF: "Swedish-Australian"
 
 
 
