Big Portugal Africa Stuff

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1087,7 +1087,14 @@
   
   SDW_ds_party:0 "von Tresckow Administration"
 
+  PEF_jc_party:0 "African Independence Rebels"
+  PEF_ss_party:0 "Reconsilidation Group"
+  PEF_an_party:0 "Carnegie Steel Representatives"
+  PEF_cn_party:0 "Republicans - Right"
+  PEF_lb_party:0 "Republicans - Left"
   PEF_ds_party:0 "Braganza Dynasty"
+  PEF_rc_party:0 "Fatimist Sympathisers"
+  PEF_ni_party:0 "Military Command"
 
   INA_an_party_long:0 "International Community Council of the Maghreb"
   INA_an_party:0 "ICCM"
