--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -5394,30 +5394,30 @@ DEA_ADJ:0 "East African"
  ZAM_cn_ADJ:0 "Zambian"
  ZAM_an_ADJ:0 "Zambian"
 
- ANG_ni:0 "Republic of Angola"
- ANG_ni_DEF:0 "The Republic of Angola"
- ANG_ds:0 "Republic of Angola"
- ANG_ds_DEF:0 "The Republic of Angola"
- ANG_rc:0 "Republic of Angola"
- ANG_rc_DEF:0 "The Republic of Angola"
- ANG_an:0 "Republic of Angola"
- ANG_an_DEF:0 "The Republic of Angola"
+ ANG_ni:0 "Sociogenetic Empire of Lusitania"
+ ANG_ni_DEF:0 "The Sociogenetic Empire of Lusitania"
+ ANG_ds:0 "Sociogenetic Republic of Lusitania"
+ ANG_ds_DEF:0 "The Sociogenetic Republic of Lusitania"
+ ANG_rc:0 "Sociogenetic Republic of Lusitania"
+ ANG_rc_DEF:0 "The Sociogenetic Republic of Lusitania"
+ ANG_an:0 "Sociogenetic Republic of Lusitania"
+ ANG_an_DEF:0 "The Sociogenetic Republic of Lusitania"
  ANG_cn:0 "Sociogenetic Republic of Lusitania"
  ANG_cn_DEF:0 "The Sociogenetic Republic of Lusitania"
- ANG_lb:0 "Republic of Angola"
- ANG_lb_DEF:0 "The Republic of Angola"
- ANG_ss:0 "Republic of Angola"
- ANG_ss_DEF:0 "The Republic of Angola"
- ANG_jc:0 "Republic of Angola"
- ANG_jc_DEF:0 "The Republic of Angola"
- ANG_ni_ADJ:0 "Angolan"
- ANG_rc_ADJ:0 "Angolan"
- ANG_lb_ADJ:0 "Angolan"
- ANG_ss_ADJ:0 "Angolan"
- ANG_jc_ADJ:0 "Angolan"
- ANG_ds_ADJ:0 "Angolan"
- ANG_cn_ADJ:0 "Angolan"
- ANG_an_ADJ:0 "Angolan"
+ ANG_lb:0 "Sociogenetic Republic of Lusitania"
+ ANG_lb_DEF:0 "The Sociogenetic Republic of Lusitania"
+ ANG_ss:0 "Sociogenetic Republic of Lusitania"
+ ANG_ss_DEF:0 "Sociogenetic Republic of Lusitania"
+ ANG_jc:0 "Sociogenetic Republic of Lusitania"
+ ANG_jc_DEF:0 "The Sociogenetic Republic of Lusitania"
+ ANG_ni_ADJ:0 "Lusitanian"
+ ANG_rc_ADJ:0 "Lusitanian"
+ ANG_lb_ADJ:0 "Lusitanian"
+ ANG_ss_ADJ:0 "Lusitanian"
+ ANG_jc_ADJ:0 "Lusitanian"
+ ANG_ds_ADJ:0 "Lusitanian"
+ ANG_cn_ADJ:0 "Lusitanian"
+ ANG_an_ADJ:0 "Lusitanian"
 
  MZB_ni:0 "Republic of Mozambique"
  MZB_ni_DEF:0 "The Republic of Mozambique"
