--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2324,6 +2324,7 @@
  VICTORY_POINTS_7980: "Harar"
 #879 - GAZALAND
  VICTORY_POINTS_8245: "Lourenco Marques"
+ VICTORY_POINTS_5212: "João Belo"
 #880 - AL-KHARIJAH
 #881 - ROCKEFELLER
  VICTORY_POINTS_10535: "Boomtown"
@@ -2944,6 +2945,11 @@
 #1321 - KASANJE
  VICTORY_POINTS_15775: "Nova Lisboa"
  VICTORY_POINTS_15377: "Silva Porto"
+
+#1326 - SOFALA
+ VICTORY_POINTS_2120: "Beira"
+ VICTORY_POINTS_15350: "Chimoio"
+
 #1337 - SOUTH KONGO
  VICTORY_POINTS_15779: "São Salvador"
  VICTORY_POINTS_8219: "Soyo"
