Capital VPS for Africa

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1538,8 +1538,10 @@
 #542 - BECHUANALAND
 #543 - MADAGASCAR
 #544 - MOZAMBIQUE
+ VICTORY_POINTS_5164: "Nampula"
+ VICTORY_POINTS_15367: "Nacala"
 #545 - ZIMBABWE
- VICTORY_POINTS_10929: "Salisbury"
+ VICTORY_POINTS_10929: "Roçadas"
 #546 - TANGANYIKA
 #547 - WEST KENYA
  VICTORY_POINTS_5160: "Kisumu"
@@ -2096,7 +2098,9 @@
 #769 - BURUNDI
  VICTORY_POINTS_2220: "Bujumbura"
 #770 - MALAWI
+ VICTORY_POINTS_12908: "Zomba"
 #771 - ZAMBIA
+ VICTORY_POINTS_13557: "Kasama"
 #772 - MIDDLE KONGO
  VICTORY_POINTS_8193: "Flegelstadt"
  VICTORY_POINTS_12975: "Pointe-Noire"
@@ -2283,7 +2287,9 @@
 #857 - OOSTKAAP
  VICTORY_POINTS_4696: "Watersehaven"
 #858 - VRIJE STAAT
+ VICTORY_POINTS_5231: "Bloemfontein"
 #859 - SWAZILAND
+ VICTORY_POINTS_15324: "Mbabane"
 #860 - SOKOTO
  VICTORY_POINTS_4972: "Kano"
  VICTORY_POINTS_1891: "Sokoto"
@@ -2293,6 +2299,7 @@
 #863 - OYO
  VICTORY_POINTS_2050: "Lagos"
 #864 - GARANGANZE
+ VICTORY_POINTS_191: "Mariavilla"
 #865 - EAST KENYA
  VICTORY_POINTS_10761: "Garissa"
 #866 - BUGANDA
@@ -2301,6 +2308,7 @@
  VICTORY_POINTS_13338: "Malindi"
  VICTORY_POINTS_5210: "Mombasa"
 #868 - BAROTSELAND
+ VICTORY_POINTS_15358: "Mongu"
 #869 - ZANZIBARIA
  VICTORY_POINTS_2196: "Dar es Salaam"
 #870 - MAASARIA
@@ -2942,13 +2950,30 @@
 #1290 - Aden
  VICTORY_POINTS_15002: "Aden"
 
+
+#1318 - BECHUANALAND
+ VICTORY_POINTS_10668: "Vryburg"
+
 #1321 - KASANJE
  VICTORY_POINTS_15775: "Nova Lisboa"
  VICTORY_POINTS_15377: "Silva Porto"
 
+
+#1323 - NORTH BAROTSELAND
+ VICTORY_POINTS_15376: "Ndola"
+
+#1324 - MATABELELAND
+ VICTORY_POINTS_15345: "Bulawayo"
+
+#1325 - LUSAKA
+ VICTORY_POINTS_15369: "Carlos"
+
 #1326 - SOFALA
  VICTORY_POINTS_2120: "Beira"
  VICTORY_POINTS_15350: "Chimoio"
+
+#1328 - BEITLAND
+ VICTORY_POINTS_10930: "Chinsali"
 
 #1337 - SOUTH KONGO
  VICTORY_POINTS_15779: "São Salvador"
@@ -3869,7 +3894,6 @@
  VICTORY_POINTS_8245:0 "Lourenco Marques"
  VICTORY_POINTS_10966:0 "Nova Lisboa"
  VICTORY_POINTS_10929:0 "Salisbury"
- VICTORY_POINTS_191:0 "Elisabethstad"
  VICTORY_POINTS_5117:0 "Josephstad"
  VICTORY_POINTS_5139:0 "Libravilla"
  VICTORY_POINTS_2080:0 "Jaunde"
