more north america VPs

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -392,7 +392,7 @@
  STATE_391: "Minnesota"
  STATE_392: "Wazhazhe"
  STATE_393: "Michigan"
- STATE_394: "Wisconsin"
+ STATE_394: "Ouisconsin"
  STATE_395: "Illinois"
  STATE_396: "Indiana"
  STATE_397: "Komi"
@@ -461,7 +461,7 @@
  STATE_460: "Constantine"
  STATE_461: "Casablanca"
  STATE_462: "Agadir"
- STATE_463: "Alaska"
+ STATE_463: "Alyaska"
  STATE_464: "Nova Scotia"
  STATE_465: "New Brunswick"
  STATE_466: "North Quebec"
@@ -469,8 +469,8 @@
  STATE_468: "Saint Lawrence"
  STATE_469: "Saskatchewan"
  STATE_470: "Alberta"
- STATE_471: "Northwestern Canada"
- STATE_472: "Northern Canada"
+ STATE_471: "Caribou"
+ STATE_472: "Arctic Territories"
  STATE_473: "British Columbia"
  STATE_474: "Yucatan"
  STATE_475: "Chiapas"
@@ -627,7 +627,7 @@
  STATE_626: "Palawan"
  STATE_627: "Mindanao"
  STATE_628: "Cebu"
- STATE_629: "Hawaii"
+ STATE_629: "South Hawaii"
  STATE_630: "Kalama"
  STATE_631: "Kauihelani"
  STATE_632: "Ueku"
@@ -680,7 +680,7 @@
  STATE_679: "Medina"
  STATE_680: "Upper Mesopotamia"
  STATE_681: "Noordkaap"
- STATE_682: "Northern Ontario"
+ STATE_682: "L'Acadie du Nord"
  STATE_683: "Keewatin"
  STATE_684: "Kings Archipelago"
  STATE_685: "Champagne-Ardenne"
@@ -738,7 +738,7 @@
  STATE_737: "Neu-Pommern"
  STATE_738: "Aru Islands"
  STATE_739: "Baranovich Island"
- STATE_740: "Vancouver Island"
+ STATE_740: "Victoria Island"
  STATE_741: "Cambodia"
  STATE_742: "Ferghana"
  STATE_743: "Qingdao"
@@ -1003,8 +1003,8 @@
  STATE_1002: "Atacama"
  STATE_1003: "Tucuman"
  STATE_1004: "Nueva Esperanza"
- STATE_1005: "Yukon"
- STATE_1006: "Novoarkhangelsk"
+ STATE_1005: "Chugan"
+ STATE_1006: "Novo-Arkhangelsk"
  STATE_1007: "North Hawaii"
  STATE_1008: "North Fezzan"
  STATE_1009: "Fyn"
