swiss stuff part 2

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -906,21 +906,22 @@
   AFG_ni_party:0 "Musahiban"
   AFG_ni_party_long:0 "House of Musahiban"
 
-  SWI_jc_party:0 "SP"
-  SWI_jc_party_long:0 "Staatssozialistische Partei der Schweiz"
-  SWI_ss_party:0 "SP"
-  SWI_ss_party_long:0 "Staatssozialistische Partei der Schweiz"
-  SWI_lb_party:0 "FDP"
-  SWI_lb_party_long:0 "Freisinnig-Demokratische Partei"
-  SWI_an_party:0 "FDP"
-  SWI_an_party_long:0 "Freisinnig-Demokratische Partei"
-  SWI_cn_party:0 "CVP"
-  SWI_cn_party_long:0 "Christlichdemokratische Volkspartei"
-  SWI_ni_party_long:0 "Union Nationale"
-  SWI_ni_party:0 "UN"
-  SWI_ds_party_long:0 "Nationale Front"
-  SWI_ds_party:0 "NF"
-  SWI_rc_party:0 "-"
+  SWI_jc_party:0 "SLP"
+  SWI_jc_party_long:0 "Sozialistische Konföderationspartei"
+  SWI_ss_party:0 "KE"
+  SWI_ss_party_long:0 "Kantonale Einheitsfront"
+  SWI_lb_party:0 "SNB"
+  SWI_lb_party_long:0 "Schweizerisch Nord Bund"
+  SWI_an_party:0 "BGBP"
+  SWI_an_party_long:0 "Bauern, Gewerbe und Bürgerpartei"
+  SWI_cn_party:0 "SCL"
+  SWI_cn_party_long:0 "Südliche Christen Liga"
+  SWI_ni_party:0 "PPS"
+  SWI_ni_party_long:0 "Parti de la Partition Suisse"
+  SWI_ds_party:0 "LG"
+  SWI_ds_party_long:0 "Landsknechtse Gilde"
+  SWI_rc_party:0 "PUB"
+  SWI_rc_party_long:0 "Partito dell'Unione Bilingue"
 
   BUL_cn_party:0 "BZNS"
   BUL_cn_party_long:0 "Balgarski Zemedelski Naroden Sayuz"
