Lexus destroying the mod again :trollface:

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -5221,7 +5221,7 @@ DEA_ADJ:0 "East African"
 
  GAR_ni:0 "Garanganze"
  GAR_ni_DEF:0 "The Garenganze Kingdom"
- GAR_ds:0 "Garanganze"
+ GAR_ds:0 "Garanganze Kingdom"
  GAR_ds_DEF:0 "The Garenganze Kingdom"
  GAR_rc:0 "Garanganze"
  GAR_rc_DEF:0 "The Garenganze Kingdom"
