balkans are done

--- a/localisation/english/PB_Generic_Events_l_english.yml
+++ b/localisation/english/PB_Generic_Events_l_english.yml
@@ -19,3 +19,29 @@
  generic_focus.3.d:0 "TODO get this written"
  generic_focus.3.a:0 "Sensibility Wins Out"
  generic_focus.3.b:0 "The Bloodletting Begins"
+
+ generic_focus.4.t:0 "[FROM.GetName] Requests our Assistance!"
+ generic_focus.4.d:0 "TODO Balkan chuds beg for help"
+ generic_focus.4.a:0 "We Always assist in fighting Imperialism!"
+ generic_focus.4.b:0 "We simply can't risk it..."
+
+ generic_focus.5.t:0 "Japan Agrees to Help!"
+ generic_focus.5.d:0 "TODO HURRAY HURRAY"
+ generic_focus.5.a:0 "Wonderful News!"
+
+ generic_focus.6.t:0 "Japan Refuses to Help"
+ generic_focus.6.d:0 "TODO I WILL DESTROY JAPAN"
+ generic_focus.6.a:0 "God Damnit!"
+
+ generic_focus.7.t:0 "Our Stake in the Powderkeg"
+ generic_focus.7.d:0 "TODO Balkan fascists beg for help"
+ generic_focus.7.a:0 "This is our Chance to Rise!"
+ generic_focus.7.b:0 "We have too much on our plate as is!"
+
+ generic_focus.8.t:0 "France Lends Industrial Aid"
+ generic_focus.8.d:0 "TODO we get free factories"
+ generic_focus.8.a:0 "Viva la France!"
+
+ generic_focus.9.t:0 "France Abstains from Helping"
+ generic_focus.9.d:0 "TODO France said no wah wah"
+ generic_focus.9.a:0 "Never trust the French"
