The VP Grind never ends ends ends

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -122,6 +122,7 @@
 #42 - MOSSELAND
  VICTORY_POINTS_11560: "Mainz"
  VICTORY_POINTS_11531: "Saarbrücken"
+ VICTORY_POINTS_3423: "Koblenz"
 #43 - BUDAPEST
  VICTORY_POINTS_9660: "Budapest"
 #44 - GHEGERIA
@@ -141,11 +142,16 @@
  VICTORY_POINTS_11747: "Osman"
 #50 - WURTTEMBERG
  VICTORY_POINTS_9517: "Stuttgart"
+ VICTORY_POINTS_11499: "Ulm"
+ VICTORY_POINTS_6943: "Konstanz"
 #51 - EAST RHINELAND
  VICTORY_POINTS_6469: "Essen"
+ VICTORY_POINTS_14510: "Duisburg"
+ VICTORY_POINTS_14511: "Düsseldorf"
 #52 - OBERBAYERN
  VICTORY_POINTS_708: "Augsburg"
  VICTORY_POINTS_692: "Munich"
+ VICTORY_POINTS_6540: "Ingolstadt"
 #53 - NIEDERAYERN
  VICTORY_POINTS_9515: "Regensburg"
 #54 - FRANKEN
@@ -154,6 +160,7 @@
 #55 - HESSEN
  VICTORY_POINTS_6488: "Frankfurt"
  VICTORY_POINTS_6549: "Kassel" 
+ VICTORY_POINTS_589: "Darmstadt" 
 #56 - WESER-EMS
  VICTORY_POINTS_11360: "Emden" 
  VICTORY_POINTS_241: "Ferdinandshaven"
@@ -164,7 +171,6 @@
  VICTORY_POINTS_6535: "Münster" 
 #58 - SCHLESWIG HOLSTEIN
  VICTORY_POINTS_6389: "Kiel"
- VICTORY_POINTS_11331: "Lübeck"
 #59 - HANNOVER
  VICTORY_POINTS_526: "Braunschweig"
  VICTORY_POINTS_3326: "Bremen"
@@ -2421,7 +2427,7 @@
  VICTORY_POINTS_13301: "Santa Fe"
 #909 - WEST-RHINELAND
  VICTORY_POINTS_3488: "Aachen"
- VICTORY_POINTS_3547: "Bonn"
+ VICTORY_POINTS_14513: "Bonn"
  VICTORY_POINTS_587: "Köln"
 #910 - ZEEUWS-VLAANDEREN
  VICTORY_POINTS_480: "Terneuzen"
@@ -2905,6 +2911,11 @@
 #1176 - ISLE OF MAN
 #1177 - GELDERLAND
  VICTORY_POINTS_9403: "Enschede"
+#1184 - NASSAU
+ VICTORY_POINTS_6444: "Wiesbaden"
+ VICTORY_POINTS_9547: "Siegen"
+#1184 - FRANKFURT
+ VICTORY_POINTS_14507: "Offenbach"
 #1212 - TABASCO
  VICTORY_POINTS_14466: "San Juan Bautista"
 #1212 - PETEN
@@ -3082,6 +3093,9 @@
  VICTORY_POINTS_6881: "San Luis Obispo"
  VICTORY_POINTS_9911: "Ciudad Tejón"
  VICTORY_POINTS_4518: "Villa Tulare"
+#1379 - LÜBECK
+ VICTORY_POINTS_15705: "Lübeck"
+
 #1400 - WEST SUMATRA
  VICTORY_POINTS_10354: "Padang"
 
@@ -3119,7 +3133,6 @@
  VICTORY_POINTS_9471:0 "Chemnitz"
  VICTORY_POINTS_6582:0 "Halle"
  VICTORY_POINTS_11276:0 "Schwerin"
- VICTORY_POINTS_11331:0 "Lübeck"
  VICTORY_POINTS_6595:0 "Liegnitz"
  VICTORY_POINTS_9361:0 "Kolberg"
  VICTORY_POINTS_11232:0 "Piła"
@@ -3228,7 +3241,6 @@
  VICTORY_POINTS_678:0 "Mülhausen"
  FRA_VICTORY_POINTS_678:0 "Mulhouse"
  VICTORY_POINTS_6712:0 "Freiburg"
- VICTORY_POINTS_3547:0 "Bonn"
  FRA_VICTORY_POINTS_3547:0 "Gamelinbourg"
  VICTORY_POINTS_512:0 "Orléans"
  VICTORY_POINTS_3552:0 "Brest"
