Fuck Leverkusen - All my homies hate them

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -148,6 +148,7 @@
  VICTORY_POINTS_6469: "Essen"
  VICTORY_POINTS_14510: "Duisburg"
  VICTORY_POINTS_14511: "Düsseldorf"
+ VICTORY_POINTS_6570: "Leverkusen"
 #52 - OBERBAYERN
  VICTORY_POINTS_708: "Augsburg"
  VICTORY_POINTS_692: "Munich"
