--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -166,6 +166,7 @@
  VICTORY_POINTS_11360: "Emden" 
  VICTORY_POINTS_241: "Ferdinandshaven"
  VICTORY_POINTS_309: "Oldenburg" 
+ VICTORY_POINTS_11388: "Osnabrück" 
 #57 - WESTFALEN
  VICTORY_POINTS_405: "Bielefeld" 
  VICTORY_POINTS_495: "Dortmund"
@@ -174,7 +175,6 @@
  VICTORY_POINTS_6389: "Kiel"
 #59 - HANNOVER
  VICTORY_POINTS_526: "Braunschweig"
- VICTORY_POINTS_3326: "Bremen"
  VICTORY_POINTS_6377: "Hannover"
 #60 - THURINGEN
  VICTORY_POINTS_6524: "Erfurt"
@@ -3096,6 +3096,9 @@
  VICTORY_POINTS_4518: "Villa Tulare"
 #1379 - LÜBECK
  VICTORY_POINTS_15705: "Lübeck"
+#1380 - BREMEN
+ VICTORY_POINTS_3326: "Bremen"
+ VICTORY_POINTS_15626: "Bremerhaven"
 
 #1400 - WEST SUMATRA
  VICTORY_POINTS_10354: "Padang"
@@ -3123,7 +3126,6 @@
  FRA_VICTORY_POINTS_587:0 "Eau de Cologne"
  VICTORY_POINTS_3488:0 "Aachen"
  FRA_VICTORY_POINTS_3488:0 "Aix-la-Chapelle"
- VICTORY_POINTS_3326:0 "Bremen"
  VICTORY_POINTS_3522:0 "Magdeburg"
  VICTORY_POINTS_3535:0 "Leipzig"
  VICTORY_POINTS_6282:0 "Stettin"
