small changes and fixes

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -70,6 +70,7 @@ PB_Law_Intimidation_Policing:0 "State Intimidation"
 PB_Law_Secret_Police:0 "Secret Police"
 PB_National_Panopticon:0 "National Panopticon"
 
+policies:1 "Civilian Policies"
 policies2:0 "Economic Policies"
 
 labour_laws:0 "Labour Laws"
