--- a/localisation/english/PB_Useful_Loc_l_english.yml
+++ b/localisation/english/PB_Useful_Loc_l_english.yml
@@ -2,7 +2,7 @@
   # FILE SHOULD CONTAIN ALL GENERIC TOOLTIPS AND OTHER THINGS
 
  PB_spacing_tt: " \n"
- PB_character_becomes_country_leader_tt: "§Y[THIS.GetName]§! becomes country leader"
+ PB_character_becomes_country_leader_tt: "§Y[THIS.GetName]§! becomes leader of §Y[PREV.GetNameWithFlag]§!"
  PB_kill_character_tt: "§Y[THIS.GetName]§! dies"
   ## ABILITIES WILL BE HERE UNTIL I RESOLVE WHY THEY DONT WORK IN A DEDICATED FILE
   AME_ABILITY_UNDYING_PATRIOTISM: "Undying Patriotism"
