--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -93,9 +93,9 @@
   FE_MULTI_PLAYER: "Play with Friends"
   FE_SELECT_SCENARIO: "SELECT A REGION"
 
-  FE_PB_VERSION: "Patch - 1.3"
-  FE_PB_NEW_CONTENT: "New Content:\n - Russian Focus Tree\n - Prussian Focus Tree\n - DLC  compatibility\n - AI Improvements\n - American Focus Tree Improvements\n - China Overhaul\n - Land Doctrines Rework"
-  FE_PB_NEXT_UPDATE: "The Next Update will feature §YPeace Deals Rework§!, §YMegacorporations§! Expanded Mechanic, additions and upgrades to the existing mechanics and §YMap Expansion and Overhaul§!"
+  FE_PB_VERSION: "Patch - 1.4"
+  FE_PB_NEW_CONTENT: "New Content:\n - KR like annexation system\n - More Flexible Gameplay\n - Generic Focus Trees\n - Massive Map Overhaul\n - Many backend improvements"
+  FE_PB_NEXT_UPDATE: "The Next Update will feature §YNew Mechanics§!, §YMegacorporations§! Expanded Mechanic, additions and upgrades to the existing mechanics, §YTechnologies Rework§! and many more!"
 
   POLL: "Next Pax Patch/Update Poll - Community Input"
   DISCORD: "Pax Britannica Discord"
