Sweden & Finland VP's & State names
h

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -109,7 +109,7 @@
  STATE_108: "Morava"
  STATE_109: "Croatia"
  STATE_110: "Ostlandet"
- STATE_111: "Uusimaa"
+ STATE_111: "Nyland"
  STATE_112: "Lisbon"
  STATE_113: "Leinster"
  STATE_114: "Sardinia"
@@ -143,12 +143,12 @@
  STATE_142: "Vestlandet"
  STATE_143: "Trondelag"
  STATE_144: "Finnmark"
- STATE_145: "Aland"
+ STATE_145: "Åland"
  STATE_146: "Kareliya"
  STATE_147: "Bay Islands"
  STATE_148: "Lappi"
- STATE_149: "Pohjanmaa"
- STATE_150: "Savo"
+ STATE_149: "Österbotten"
+ STATE_150: "Savolax"
  STATE_151: "Eastern Switzerland"
  STATE_152: "Upper Austria"
  STATE_153: "Tyrol"
@@ -1019,7 +1019,7 @@
  STATE_1018: "Dalarna"
  STATE_1019: "Jamtland"
  STATE_1020: "Västerbotten"
- STATE_1021: "Turku"
+ STATE_1021: "Åbo"
  STATE_1022: "Hame"
  STATE_1023: "Liguria"
  STATE_1024: "Apulia"
@@ -1360,7 +1360,7 @@
  STATE_1359: "Prinslandet"
  STATE_1360: "King William Land"
  STATE_1361: "Liechtenstein"
- STATE_1362: "Tornio"
+ STATE_1362: "Torneå"
  STATE_1363: "Kemi"
  STATE_1364: "Central Finland"
  STATE_1365: "Pavlograd"
