--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1151,9 +1151,9 @@
   MIQ_cn_party:0 "Hashemite Dynasty"
   MIQ_ds_party:0 "Hashemite Dynasty"
 
-  ALB_cn_party:0 "House of Wied-Neuwied"
-  ALB_ds_party:0 "House of Wied-Neuwied"  
-  ALB_rc_party:0 "House of Wied-Neuwied"
+  ALB_cn_party:0 "Alawiyya Dynasty"
+  ALB_ds_party:0 "Alawiyya Dynasty"  
+  ALB_rc_party:0 "Alawiyya Dynasty"
 
   ITA_cn_party:0 "DC"
   ITA_cn_party_long:0 "Democrazia Cristiana"
