--- a/localisation/english/PB_country_specific/PB_Albania_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Albania_l_english.yml
@@ -77,4 +77,9 @@
   # Ministers/Generals/Tech Teams
   ##########################
 
-  
+    ######################
+  ####  CHARACTERS  ####
+  ######################
+
+  ### LEADERS ###
+  ALB_fuad_i: "Fuad I"
