swiss stuff pt 3

--- a/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
@@ -4,11 +4,20 @@
 # IDEAS
 ##########################
 
-  PB_SWI_Neutrality: "Swiss Necessity Neutrality"
+  PB_SWI_Neutrality: "Necessitive Neutrality"
   PB_SWI_Neutrality_desc: "Neutrality is what the Swiss Confederacy is famous for, but in reality its neutrality is only relative to its neighbours. The Swiss Confederacy only pledged perpetual peace in respect to France after their defeat at Marginano, and neutrality in respect to Germany because of the 1870 treaty. When it comes to any other nation, the Swiss would theoretically have no obligation to stay neutral in their wars. But because of its place in the middle of Europe surrounded by 3 giants; France, Germany and Italy, it has chosen to stay neutral in basically all wars since 1648."
 
-  PB_SWI_constitutional_question: "Constitutional Question"
-  PB_SWI_constitutional_question_desc: "Because of the nature of the confederation, centralised policies on anything is basically nigh impossible when it’s a controversial subject. One of those infamous subjects is the Swiss constitution, or rather the lack of a constitution. All important decisions are still made the same way as they were in the 1700s; by the Federal Diet in Zürich. The religions lines drew themselves during the protestant reformation still dominate the country’s politics and although the protestants are technically in the majority, cantons of either religion are increasingly deciding to take a third side outside of old religious debacles, straining the power of the Diet even more. And in this era of radicalisation who knows if the question might be solved violently or peacefully."
+  PB_SWI_bund_tensions_low: "Bund Tensions:§G Low§!"
+  PB_SWI_bund_tensions_low_desc: "Because of the nature of the confederation, centralised policies on anything is basically nigh impossible when it’s a controversial subject. One of those infamous subjects is the Swiss constitution, or rather the lack of a constitution. All important decisions are still made the same way as they were in the 1700s; by the Federal Diet in Zürich. The religions lines drew themselves during the protestant reformation still dominate the country’s politics and although the protestants are technically in the majority, cantons of either religion are increasingly deciding to take a third side outside of old religious debacles, straining the power of the Diet even more. And in this era of radicalisation who knows if the question might be solved violently or peacefully."
+
+  PB_SWI_bund_tensions_moderate: "Bund Tensions:§B Moderate§!"
+  PB_SWI_bund_tensions_moderate_desc: "Because of the nature of the confederation, centralised policies on anything is basically nigh impossible when it’s a controversial subject. One of those infamous subjects is the Swiss constitution, or rather the lack of a constitution. All important decisions are still made the same way as they were in the 1700s; by the Federal Diet in Zürich. The religions lines drew themselves during the protestant reformation still dominate the country’s politics and although the protestants are technically in the majority, cantons of either religion are increasingly deciding to take a third side outside of old religious debacles, straining the power of the Diet even more. And in this era of radicalisation who knows if the question might be solved violently or peacefully."
+
+  PB_SWI_bund_tensions_high: "Bund Tensions:§O High§!"
+  PB_SWI_bund_tensions_high_desc: "Because of the nature of the confederation, centralised policies on anything is basically nigh impossible when it’s a controversial subject. One of those infamous subjects is the Swiss constitution, or rather the lack of a constitution. All important decisions are still made the same way as they were in the 1700s; by the Federal Diet in Zürich. The religions lines drew themselves during the protestant reformation still dominate the country’s politics and although the protestants are technically in the majority, cantons of either religion are increasingly deciding to take a third side outside of old religious debacles, straining the power of the Diet even more. And in this era of radicalisation who knows if the question might be solved violently or peacefully."
+
+  PB_SWI_bund_tensions_very_high: "Bund Tensions:§R Very High§!"
+  PB_SWI_bund_tensions_very_high_desc: "Because of the nature of the confederation, centralised policies on anything is basically nigh impossible when it’s a controversial subject. One of those infamous subjects is the Swiss constitution, or rather the lack of a constitution. All important decisions are still made the same way as they were in the 1700s; by the Federal Diet in Zürich. The religions lines drew themselves during the protestant reformation still dominate the country’s politics and although the protestants are technically in the majority, cantons of either religion are increasingly deciding to take a third side outside of old religious debacles, straining the power of the Diet even more. And in this era of radicalisation who knows if the question might be solved violently or peacefully."
 
   PB_SWI_habsburg_treaty: "Habsburg Treaty"
   PB_SWI_habsburg_treaty_desc: "Although de facto independent from the Holy Roman Empire since the Treaty of Westphalia in 1648, the Swiss confederation and its associates still had to sign, a somewhat humiliating, treaty with the United Kingdoms of Germany in 1870 when this formed. As the new German state had desires of uniting all Germans, including those in Switzerland. However this would have certainly caused international outrage, and instead the two states signed a treaty stating that they would be neutral towards each other and not aid each other's enemies in the event of war. This came with economic agreements heavily favouring the German Kingdoms. This treaty still stands but is increasingly becoming a burden on the Swiss economy and straining relations between the two nations as both have very separate ideas of what a confederation should be in the modern age."
@@ -16,5 +25,23 @@
   PB_SWI_waning_associates: "Waning Associates"
   PB_SWI_waning_associates_desc: "The associates of the Swiss Confederacy date all the way back to the middle ages, and are a series of Cantons on the fringes of the confederacy that technically aren’t part of the confederacy. Their citizens do have Swiss citizenship, and the Swiss army defends them, but they could theoretically disband the association treaty and become fully independent cantons and join other nations, like Neuchatel and Jura. This divide between these loosely affiliated cantons and the federal diet may not seem big on a cultural level, but economically the cantons have basically free reign and do not have to adhere to decisions of the Federal Diet if they don't wish to. The cantons in the confederacy are currently divided whether these associates should be able to properly join the confederacy or not."
 
+  PB_SWI_databank_world: "Databank of the World"
+  PB_SWI_databank_world_desc: "WIP"
+
   PB_SWI_confederation: "Swiss Confederacy"
   PB_SWI_landknechts: "Mercenary Haven"
+
+  SWI_PROTESTANT: "Swiss Loyalists"
+  SWI_PROTESTANT_DEF: "the Swiss Loyalists"
+  SWI_PROTESTANT_ADJ: "Swiss"
+
+  SWI_CATHOLIC: "Catholic Revolt"
+  SWI_CATHOLIC_DEF: "the Catholic Revolt"
+  SWI_CATHOLIC_ADJ: "Swiss"
+
+  swiss.1.t: "Automation Crisis Hits Switzerland"
+  swiss.1.d: "WIP"
+  swiss.1.a: "The banks won't like this!"
+
+  SWI_tagsatzung: "Tagsatzung"
+  SWI_tagsatzung_desc: " "
