small swiss changes

--- a/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
@@ -1,5 +1,13 @@
 ﻿l_english:
 
+  ######################
+  ####  CHARACTERS  ####
+  ######################
+
+  ### LEADERS ###
+  SWI_tagsatzung: "Tagsatzung"
+  SWI_tagsatzung_leader_desc: " "
+
 ##########################
 # IDEAS
 ##########################
@@ -42,6 +50,3 @@
   swiss.1.t: "Automation Crisis Hits Switzerland"
   swiss.1.d: "WIP"
   swiss.1.a: "The banks won't like this!"
-
-  SWI_tagsatzung: "Tagsatzung"
-  SWI_tagsatzung_desc: " "
