--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -136,7 +136,7 @@
  STATE_135: "Munster"
  STATE_136: "Aberdeenshire"
  STATE_137: "Crimea"
- STATE_138: "Scania"
+ STATE_138: "Skåneland"
  STATE_139: "Småland"
  STATE_140: "Västergötland"
  STATE_141: "Svealand"
@@ -672,7 +672,7 @@
  STATE_671: "Annam"
  STATE_672: "Palembang"
  STATE_673: "North Sulawesi"
- STATE_674: "New Scania"
+ STATE_674: "Nya Skåne"
  STATE_675: "Raqqah"
  STATE_676: "Erbil"
  STATE_677: "Aleppo"
@@ -787,7 +787,7 @@
  STATE_786: "Oualata"
  STATE_787: "Gilgit-Baltistan"
  STATE_788: "Wallonie Du Sud"
- STATE_789: "New Cornwall"
+ STATE_789: "Nya Götaland"
  STATE_790: "North Aceh"
  STATE_791: "Gustavia"
  STATE_792: "Western Kalimantan"
@@ -1013,11 +1013,11 @@
  STATE_1012: "Rogaland"
  STATE_1013: "Telemark"
  STATE_1014: "Innlandet"
- STATE_1015: "Ostergotland"
- STATE_1016: "Varmland"
- STATE_1017: "Vastmanland"
+ STATE_1015: "Östergotland"
+ STATE_1016: "Värmland"
+ STATE_1017: "Västmanland"
  STATE_1018: "Dalarna"
- STATE_1019: "Jamtland"
+ STATE_1019: "Jämtland"
  STATE_1020: "Västerbotten"
  STATE_1021: "Åbo"
  STATE_1022: "Tavastland"
@@ -1077,7 +1077,7 @@
  STATE_1076: "Tristan de Cunha"
  STATE_1077: "Bouvet Island"
  STATE_1078: "Jan Mayen"
- STATE_1079: "Svalbard"
+ STATE_1079: "Spetsbergen"
  STATE_1080: "Litke Archipelago"
  STATE_1081: "Nenetsia"
  STATE_1082: "Central Urals"
