ideology groups scripted triggers

--- a/localisation/english/PB_Useful_Loc_l_english.yml
+++ b/localisation/english/PB_Useful_Loc_l_english.yml
@@ -2,8 +2,13 @@
   # FILE SHOULD CONTAIN ALL GENERIC TOOLTIPS AND OTHER THINGS
 
  PB_spacing_tt: " \n"
+  ## CHARACTER TOOLTIPS
  PB_character_becomes_country_leader_tt: "§Y[THIS.GetName]§! becomes leader of §Y[PREV.GetNameWithFlag]§!"
  PB_kill_character_tt: "§Y[THIS.GetName]§! dies"
+  ## IDEOLOGY TOOLTIPS
+ has_far_right_government_group_tt: "Country is in §gFar-Right§! ideologial group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
+ has_democratic_government_group_tt: "Country is in §2Democratic§! ideologial group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
+ has_jacobin_government_group_tt: "Country is in §OJacobin§! ideologial group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
   ## ABILITIES WILL BE HERE UNTIL I RESOLVE WHY THEY DONT WORK IN A DEDICATED FILE
   AME_ABILITY_UNDYING_PATRIOTISM: "Undying Patriotism"
   PB_AME_Undying_Patriotism_tt: "Unlocks the §HUndying Patriotism§! ability, which is an improved version of the §YForce Attack§!  ability\n\n"
